collections/management/networkpolicies/allow-to-apiserver.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-to-apiserver
spec:
  selector: b2.genesiscloud.dev/allow-to-apiserver == 'true'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        services:
          name: kubernetes
          namespace: default
