collections/management/networkpolicies/expose-to-apiserver.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: expose-to-apiserver
spec:
  selector: b2.genesiscloud.dev/expose-to-apiserver == 'true'
  types:
    - Ingress
  ingress:
    # Allow incoming traffic from the K8s API server.
    # Unfortunately, since the API servers run in the network namespaces of their hosts,
    # matching them properly is not really possible so we need this.
    - action: Allow
      protocol: TCP
      source:
        nets:
          # Norway control plane hosts
          - 192.168.56.3/32
          - 192.168.56.4/32
          - 192.168.56.5/32
          # EMC control plane prefix
          - 10.8.2.0/24
