collections/management/networkpolicies/global-deny.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: global-deny
spec:
  namespaceSelector:
    has(projectcalico.org/name) &&
    projectcalico.org/name not in
    {
        "kube-system", "calico-system", "calico-apiserver",
        "flux-system", "kube-node-lease", "kube-public"
    }
  types:
    - Ingress
    - Egress
  egress:
    # allow all namespaces to communicate to DNS pods
    - action: Allow
      protocol: UDP
      destination:
        selector: 'k8s-app == "kube-dns"'
        namespaceSelector: has(projectcalico.org/name) && projectcalico.org/name == "kube-system"
        ports:
          - 53
